change-english-profile-and-report-latest-version-and-fix-font-size-for-media-on-profile-and-report-and-fix-link-contact-to-jump

--- a/css/original/profile.css
+++ b/css/original/profile.css
@@ -59,6 +59,11 @@ h3{
     text-align: right;
     font-family: "游明朝", "YuMincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;;
 }
+@media{
+    .president-signature{
+        font-size:0.8rem;
+    }
+}
 
 .annual-report{
     text-align: center;
